hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__fadd@llvm14.snap
---
source: src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define double @_hl.main.1(double %0, double %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = fadd double %0, %1
  ret double %2
}
