hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__fdiv@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define double @_hl.main.1(double %0, double %1) {
alloca_block:
  %"0" = alloca double, align 8
  %"1" = alloca double, align 8
  %"01" = alloca double, align 8
  %"2_0" = alloca double, align 8
  %"2_1" = alloca double, align 8
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, double* %"0", align 8
  store double %1, double* %"1", align 8
  %"02" = load double, double* %"0", align 8
  %"13" = load double, double* %"1", align 8
  store double %"02", double* %"2_0", align 8
  store double %"13", double* %"2_1", align 8
  %"2_04" = load double, double* %"2_0", align 8
  %"2_15" = load double, double* %"2_1", align 8
  %"2_06" = load double, double* %"2_0", align 8
  %"2_17" = load double, double* %"2_1", align 8
  %2 = fdiv double %"2_06", %"2_17"
  store double %2, double* %"4_0", align 8
  %"4_08" = load double, double* %"4_0", align 8
  store double %"4_08", double* %"01", align 8
  %"09" = load double, double* %"01", align 8
  ret double %"09"
}
